syntax = "proto3";
package go.micro.srv.ideas;
option go_package="occupation";
import "google/protobuf/timestamp.proto";

service OccupationService {
    rpc CreateOccupations(CreateOccupationsRequest) returns (CreateOccupationsResponse) {}
    rpc UpdateOccupations(UpdateOccupationsRequest) returns (UpdateOccupationsResponse) {}
    rpc HideOccupations(HideOccupationsRequest) returns (HideOccupationsResponse) {}
    rpc ShowOccupations(ShowOccupationsRequest) returns (ShowOccupationsResponse) {}
}

message ShowOccupationsResponse {
    int64 matched = 1;
    int64 modified = 2;
}

message HideOccupationsResponse {
    int64 matched = 1;
    int64 modified = 2;
}

message UpdateOccupationsResponse {
    int64 matched = 1;
    int64 modified = 2;
    repeated Occupation occupations = 3;
}

message CreateOccupationsResponse {
    int64 matched = 1;
    int64 modified = 2;
    repeated Occupation occupations = 3;
}

message ShowOccupationsRequest {
    repeated string ids = 1;
}

message UpdateOccupationsRequest {
    repeated Occupation occupations = 1;
}

message CreateOccupationsRequest {
    repeated Occupation occupations = 1;
}

message HideOccupationsRequest {
    repeated string ids = 1;
}

message occupations {
    repeated Occupation occupations = 1;
}

message Occupation {
    // @inject_tag: bson:"_id" valid:"required~ID is required, uuidv4~ID must be a valid UUIDv4" conform:"trim"
    string ID = 1;
    // @inject_tag: bson:"name" valid:"required~Name is required" conform:"trim"
    string name = 2;
    // @inject_tag: bson:"hidden"
    bool hidden = 3;
    // @inject_tag: bson:"created_at"
    google.protobuf.Timestamp created_at = 4;
    // @inject_tag: bson:"updated_at"
    google.protobuf.Timestamp updated_at = 5;
}